--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,43 @@
 version: '3'
 services:
+  zookeeper:
+    image: quay.io/debezium/zookeeper
+    ports:
+     - 2181:2181
+     - 2888:2888
+     - 3888:3888
+  kafka:
+    image: quay.io/debezium/kafka
+    ports:
+     - 9092:9092
+    links:
+     - zookeeper
+    environment:
+     - ZOOKEEPER_CONNECT=zookeeper:2181
+  mysql:
+    image: quay.io/debezium/example-mysql
+    ports:
+     - 3307:3307
+    environment:
+     - MYSQL_ROOT_PASSWORD=debezium
+     - MYSQL_USER=mysqluser 
+     - MYSQL_PASSWORD=mysqlpw 
+  connect:
+    image: debezium/connect:1.8
+    ports:
+     - 8083:8083
+    links:
+     - kafka
+     - mysql
+     - postgres
+    environment:
+     - BOOTSTRAP_SERVERS=kafka:9092
+     - GROUP_ID=1
+     - CONFIG_STORAGE_TOPIC=my_connect_configs
+     - OFFSET_STORAGE_TOPIC=my_connect_offsets
+     - STATUS_STORAGE_TOPIC=my_source_connect_statuses
   mysql-db:
-    image: mysql:8.0
+    image: quay.io/debezium/example-mysql
     hostname: mysql-db
     container_name: mysql_db
     restart: always
@@ -16,3 +52,5 @@ services:
       - my-db-volume:/var/lib/mysql
 volumes:
   my-db-volume:
+  #https://github.com/nowwin4u/cdc-kafka-debezium
+  #docker run -p 9000:9000 -e KAFKA_BROKERCONNECT=kafka:9092 obsidiandynamics/kafdrop
